# DSXSkyrim-NG

./: .clang-format  .clang-format-ignore  .gitignore  BuildRelease.bat  CMakeLists.txt  CMakePresets.json  DSXSkyrimConfig.json  README.md  vcpkg-configuration.json  vcpkg.json
cmake/: AddCXXFiles.cmake
include/: EventManager.h  Events.h  HelperFunc.h  Main.h  PCH.h  UDPHelper.h
src/: DSXController.cpp  DSXController.hpp  EventHandler.cpp  EventHandler.h  EventManager.cpp  Events.cpp  Main.cpp  PCH.h  UDPHelper.cpp  XSEPlugin.cpp
